<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="15dp"
    android:background="@drawable/gradient2"
    tools:context=".StrukActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/abu">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/struk_pembayaran"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textAlignment="center"
        android:fontFamily="@font/unna1"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="PT ABC"
        android:textSize="20sp"
        android:textAlignment="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Rondi Marten"
        android:textSize="18sp"
        android:textAlignment="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Jl. Raya Gadel, No.70, Indramayu"
        android:textSize="15sp"
        android:textAlignment="center"
        android:layout_marginBottom="10dp"/>

    </LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/garis"
        android:textSize="25sp"
        android:textAlignment="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--TANGGAL-->
        <TextView
            android:id="@+id/txt_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="20dp"
            android:text="@string/tgl"
            android:textColor="#022E57"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txt_nama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="15dp"
            android:text="@string/nama_pembeli"
            android:textColor="#022E57"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/garis"
            android:textSize="25sp"
            android:textAlignment="center"/>

        <!--MAKANAN-->

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_makanan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/hasil_pesanan"
            android:textColor="#022E57"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/txt_qyt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="qyt"
            android:textColor="#022E57"
            android:textSize="18sp" />



</LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/garis"
            android:textSize="25sp"
            android:textAlignment="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="right"
            android:paddingRight="20dp">
        <TextView
            android:id="@+id/txt_sub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/subtotal"
            android:textColor="#022E57"
            android:textSize="18sp" />



        <TextView
            android:id="@+id/txt_pajak"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pajak"
            android:textColor="#022E57"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/txt_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:textColor="#022E57"
            android:textSize="18sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/garis"
            android:textSize="25sp"
            android:textAlignment="center"/>
        <TextView
            android:id="@+id/txt_tunai"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/tunai"
            android:textColor="#022E57"
            android:textSize="18sp" />



        <!--KEMBALIAN-->



        <TextView
            android:id="@+id/txt_kembalian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/kembalian"
            android:textColor="#022E57"
            android:textSize="18sp" />

        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/garis"
            android:textSize="25sp"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/terima_kasih"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:textAlignment="center"/>
    </LinearLayout>


        <Button
            android:id="@+id/btn_kembali"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="Kembali"
            android:textColor="@color/white"
            android:background="@drawable/gradient"
            android:layout_marginBottom="20dp"/>
    </LinearLayout>

    </LinearLayout>

</ScrollView>